# python-project-lvl3

./: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses-.html  ru-hexlet-io-courses-static-img-img1-png.html  ru-hexlet-io-courses.html
.github/workflows/: all_tests.yml
page_loader/: __init__.py  cli.py  download.py  logger.py  pageloader.py
page_loader/scripts/: page_loader.py
tests/: test_app.py  test_load_css_js.py  test_name_data.py
tests/fixtures/test1/: index.html  rigt_answer.html
tests/fixtures/test2/: index.html  right_answer.html
