[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Barzabel <kochenko1995@mail.ru>"]
packages = [
    { include = "page_loader" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
bs4 = "^0.0.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
